--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -578,6 +578,8 @@ table.field-details .help-text hr {
 .tag-select {
 	border: 1px solid #cccccc;
 	border-radius: 4px;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	transition: border linear .2s, box-shadow linear .2s;
 }
 
 .readonly .tag-select {
