Implemented create/search feature on TagSelect.
- on the fly create record
- open popup on tag click
- search popup

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -629,6 +629,11 @@ table.field-details .help-text hr {
 	cursor: pointer;
 }
 
+.tag-select span.label a,
+.tag-select li.tag-item a {
+	color: white;
+}
+
 .tag-select li.tag-selector input {
 	border: none;
 	border-radius: 0 !important;
