--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -633,9 +633,16 @@ table.field-details .help-text hr {
 	cursor: pointer;
 }
 
-.tag-select span.label a,
-.tag-select li.tag-item a {
-	color: white;
+.tag-select .tag-text {
+
+}
+
+.tag-select .tag-link {
+	cursor: pointer;
+}
+
+.tag-select .tag-link:hover {
+	text-decoration: underline;
 }
 
 .tag-select li.tag-selector input {
