--- a/axelor-web/src/main/webapp/partials/nav-tabs.html
+++ b/axelor-web/src/main/webapp/partials/nav-tabs.html
@@ -5,7 +5,9 @@
 	<div class="nav-tabs-strip">
 	<ul class="nav nav-tabs nav-tabs-scrollable nav-tabs-closable">
 	 <li ng-repeat="tab in tabs" ng-class="{ active: tab.selected }">
-	   <a href="" ng-click="navClick(tab)">{{tab.title}}</a>
+	   <a href="" ng-click="navClick(tab)">
+	     <img class="prefix-icon" ng-show="tab.icon" ng-src="{{tab.icon}}"><span>{{tab.title}}</span>
+	   </a>
 	   <i class="icon-remove-sign" ng-click="closeTab(tab)"></i>
 	 </li>
 	</ul>
