--- a/axelor-wkf/src/main/resources/views/Workflow.xml
+++ b/axelor-wkf/src/main/resources/views/Workflow.xml
@@ -20,7 +20,7 @@
 
 <!-- VIEWS -->
     
-    <grid name="worfklow-grid" title="Workflows" model="com.axelor.wkf.db.Workflow">
+    <grid name="workflow-grid" title="Workflows" model="com.axelor.wkf.db.Workflow">
         <field name="name"/>
         <field name="metaModel"/>
         <field name="node"/>
@@ -28,7 +28,7 @@
         <field name="active"/>
     </grid>
     
-    <form name="worfklow-form" title="Workflow" cols="4" model="com.axelor.wkf.db.Workflow" onSave="wkf-validate">
+    <form name="workflow-form" title="Workflow" cols="4" model="com.axelor.wkf.db.Workflow" onSave="wkf-validate">
         <field name="name"/>
         <field name="metaModel"/>
     	<field name="sequence" />
@@ -37,7 +37,7 @@
         	<page title="Configuration">
 		        <field name="maxNodeCounter"/>
 		        <field name="condition" />
-		        <field name="node" form-view="start-node-form" />
+		        <field name="node" form-view="start-node-form" widget="[canReload=true]" />
 		    </page>
 		    <page title="Description">
         		<field name="description" colSpan="4" noLabel="true"/>
@@ -155,7 +155,7 @@
     	<field name="type" expr="intermediary"/>
     	<field name="workflow" expr="eval: _parent?.startNode?.workflow" if="_parent?.startNode"/>
     	<field name="workflow" expr="eval: _parent?._parent?.workflow" if="_parent?._parent"/>
-    	<field name="name" expr="eval: type?.toUpperCase() + ':'"/>
+    	<field name="name" expr="eval: 'INTERMEDIARY:'"/>
     </action-record>
     
     <action-record name="node-record-name" model="com.axelor.wkf.db.Node">
