--- a/axelor-web/src/main/webapp/css/navtree.css
+++ b/axelor-web/src/main/webapp/css/navtree.css
@@ -39,3 +39,7 @@
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 }
+
+header .navbar-inverse .nav li a img {
+	height: 20px;
+}
