Implemented RefSelect widget.

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -666,3 +666,12 @@ table.field-details .help-text hr {
 	font-style: oblique;
 	padding-left: 12px;
 }
+
+.multi-object-select {
+	
+}
+
+.multi-object-select fieldset,
+.multi-object-select .v-align-top {
+	padding: 0 !important;
+}
