Improved nav tabs.

--- a/axelor-web/src/main/webapp/css/tabs.css
+++ b/axelor-web/src/main/webapp/css/tabs.css
@@ -72,6 +72,12 @@
 	right: 6px;
 	color: #ccc;
 	cursor: pointer;
+	font-size: 11px;
+}
+
+.nav-tabs-closable li.inactive:hover > a {
+	color: #005580;
+	background-color: #eee;
 }
 
 .nav-tabs-closable .active > i,
