Improved form item labels.

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -48,6 +48,11 @@ table.form-layout td.form-label > label {
 	margin-top: 2px;
 	margin-bottom: 0px;
 	font-weight: bold;
+	cursor: inherit;
+}
+
+table.form-layout td.form-label > label > span {
+	cursor: pointer;
 }
 
 table.form-layout td.form-label > label:after {
